--- a/lab04/package.json
+++ b/lab04/package.json
@@ -1,31 +1,23 @@
 {
-  "name": "node_first_app",
+  "name": "nodejs-complete-guide",
   "version": "1.0.0",
-  "description": "this is project nodejs",
+  "description": "Complete Node.js Guide",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js",
     "start-server": "node app.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/doanvanmy2302/funixNodeJS.git"
-  },
-  "author": "my",
+  "author": "Maximilian Schwarzmüller",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/doanvanmy2302/funixNodeJS/issues"
-  },
-  "homepage": "https://github.com/doanvanmy2302/funixNodeJS#readme",
-  "dependencies": {
-    "body-parser": "^1.20.0",
-    "ejs": "^3.1.7",
-    "express": "^4.17.3",
-    "express-handlebars": "3.0",
-    "pug": "^3.0.2"
-  },
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "nodemon": "^1.18.3"
+  },
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "ejs": "^2.6.1",
+    "express": "^4.16.3",
+    "express-handlebars": "^3.0.0",
+    "pug": "^2.0.3"
   }
 }
