--- a/lab08/package.json
+++ b/lab08/package.json
@@ -11,14 +11,15 @@
   "author": "Maximilian Schwarzmüller",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^1.19.4"
+    "nodemon": "^1.18.3"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "connect-mongodb-session": "^2.0.3",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
-    "express-session": "^1.17.3",
+    "express-session": "^1.15.6",
     "mongodb": "^3.1.6",
     "mongoose": "^5.2.17",
     "mysql2": "^1.6.1",
