--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "njs101x_assignment1",
+  "name": "asm1",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,20 +10,27 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/phuoclethanh/FUNixNodeJSASM.git"
+    "url": "https://github.com/doanvanmy2302/funixNodeJS.git"
   },
-  "author": "PhuocLT",
+  "author": "My",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/phuoclethanh/FUNixNodeJSASM/issues"
+    "url": "https://github.com/doanvanmy2302/funixNodeJS.git"
   },
-  "homepage": "https://github.com/phuoclethanh/FUNixNodeJSASM#readme",
+  "homepage": "https://github.com/doanvanmy2302/funixNodeJS.git",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.2",
+    "connect-flash": "^0.1.1",
+    "connect-mongodb-session": "^3.1.1",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
+    "express-session": "^1.17.3",
+    "express-validator": "^6.14.1",
     "mongodb": "^4.4.1",
     "mongoose": "^6.2.7",
-    "nodemon": "^1.18.3"
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^1.18.3",
+    "pdfkit": "^0.13.0"
   }
 }
